--- a/rabbits.html
+++ b/rabbits.html
@@ -109,7 +109,7 @@ body {
 
       <strong><h1 class="THE-END"> THE END</h1></strong>
 
-    <a href="https://casperhouse.github.io"> Go Home:)</a>
+    <a href="https://casperhouse.github.io"> Go Home:D</a>
 
 
 
