--- a/Warning.html
+++ b/Warning.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <strong><h1 class="Heading">WARNING</h1></strong>
-    <strong><h2 class="Heading">Me nor endermanch are <span style="color:red; background-color:orange;">NOT</span> responsible for any distruction that you cause.</h2></strong>
+    <strong><h2 class="Heading">Me nor endermanch are <span style="background-color:red;">NOT</span> responsible for any distruction that you cause.</h2></strong>
     <strong><a class="continue"href="https://www.malwarewatch.org">Click To Continue</a></strong>
 </body>
 </html>
