--- a/Warning.html
+++ b/Warning.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Continue?</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="warningstyle.css">
     <link rel="icon" href="https://th.bing.com/th/id/R.e94b0bb00b08ae3e35d92874f39ec09e?rik=hhKs%2b1D1VQg2NQ&pid=ImgRaw&r=0">
 
 
