--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Welcome to Casperhouse!</h1>
     </header>
     <section>
-        <p>please select one of the following avalible pages.</p>
-        <a href="Why.html" class="button">Why I made this</a><div><a href="rabbits.html" class="button">Rabbits</a><div><a href="Warning.html" class="button" style="color:red;">Malware</a></div></div>
+        <p>Sorry, But This site is no longer used Please click the link below.</p>
+        <a href="http://casperhouse.42web.io" class="button">New Site</a>
     </section>
 </body>
 </html>
