--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://jailbreaks.rf.gd/pheonix6(2).ipa"></a>
+    <a href="pheonix6(2).ipa"></a>
 </body>
 </html>
